fda/devops/kubernetes/production/namespace.yaml
# Namespace for Capstone Services
apiVersion: v1
kind: Namespace
metadata:
  name: capstone-services
  labels:
    name: capstone-services
